Refix overflow bug input, chrome bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,7 +361,6 @@
 .editForm > div.image div.upload_container div.plupload,
 .editForm > div.file div.upload_container div.plupload {
   width: 100% !important;
-  overflow: visible !important;
 }
 .editForm > div.image div.image_container,
 .editForm > div.file div.image_container {
@@ -1651,7 +1650,6 @@ a {
 #admin_page #content div.item_edit_container div.item_edit form.edit_form > div.image div.upload_container div.plupload,
 #admin_page #content div.item_edit_container div.item_edit form.edit_form > div.file div.upload_container div.plupload {
   width: 100% !important;
-  overflow: visible !important;
 }
 #admin_page #content div.item_edit_container div.item_edit form.edit_form > div.image div.image_container,
 #admin_page #content div.item_edit_container div.item_edit form.edit_form > div.file div.image_container {
@@ -1687,6 +1685,7 @@ a {
 #admin_page #content div.item_edit_container div.item_edit form.edit_form div.control_buttons {
   margin-top: 20px;
   padding-bottom: 20px;
+  z-index: 800;
 }
 #admin_page #content div.item_edit_container div.item_edit form.edit_form div.control_buttons span.message {
   display: block;
